separado script de countdown a un archivo separado

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
             {% if user %}
             <a href="/posiciones">posiciones</a>
             <a href="/resultados">resultados</a>
+            <a href="/resultados_por_usuario">Ver planillas</a>
             <span>{{user.name}} (<a href="/logout">logout</a>)</span>
             {% else %}
             <a href="/login">login</a>
