--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,9 @@
 {% extends "base.html" %}
 
-{% block body_content %}<script>
-
+{% block body_content %}
+<script src='/scripts/countdown.js'></script>
+<script>
     CountDownTimer('{{ronda.limite}}', 'countdown');
-
-    function CountDownTimer(dt, id)
-    {
-        var end = new Date(dt);
-
-        var _second = 1000;
-        var _minute = _second * 60;
-        var _hour = _minute * 60;
-        var _day = _hour * 24;
-        var timer;
-
-        function showRemaining() {
-            var now = new Date();
-            var distance = end - now;
-            if (distance < 0) {
-
-                clearInterval(timer);
-                document.getElementById(id).innerHTML = 'Ya no se puede modificar esta sección!';
-
-                return;
-            }
-            var days = Math.floor(distance / _day);
-            var hours = Math.floor((distance % _day) / _hour);
-            var minutes = Math.floor((distance % _hour) / _minute);
-            var seconds = Math.floor((distance % _minute) / _second);
-			
-			document.getElementById(id).innerHTML = 'Faltan ';
-			if (days > 0) 
-				document.getElementById(id).innerHTML += days + 'dias ';
-			
-            document.getElementById(id).innerHTML += hours + ' hs ';
-            document.getElementById(id).innerHTML += minutes + ' mins ';
-            document.getElementById(id).innerHTML += seconds + ' secs';
-            document.getElementById(id).innerHTML += ' para el cierre';
-        }
-
-        timer = setInterval(showRemaining, 1000);
-    }
-
 </script>
 {% if whoami != "resultados" %}
 <div id="countdown"></div>
