separe el index un poco porque estaba muy cargado. Se pueden ver las plantillas de otros usuarios. Ahora hay que hacer que solo se muestren cuando ya pasó el tiempo

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,8 @@
 <script>
     CountDownTimer('{{ronda.limite}}', 'countdown');
 </script>
-{% if whoami != "resultados" %}
+
 <div id="countdown"></div>
-{% endif %}
 
 {% if score %}
 <div class="score">
@@ -21,226 +20,10 @@ Puntos: {{score.scoreTotal}} <br/>
 
 <div class="selector-rondas">
     {% for r in rondas %}
-    <a href="/{{whoami}}?ronda={{r.ronda}}">{{r.ronda}}</a> 
+    <a href="/?ronda={{r.ronda}}">{{r.ronda}}</a> 
     {% endfor %}
 </div>
 
-<form method="post">
-    {% if mostrarExtras %}
-    <div class="ronda">
-        <div class="non-grupo">
-            <div class="titulo">Extras</div>
-                <table>
-                    <tbody>
-                        <tr>
-                            <td>Campeón</td>
-                            <td>
-                                <select name="campeon"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for equipo in equipos %}
-                                    <option value="{{equipo.code}}"
-                                    {% if extras.campeon == equipo.code %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{equipo.title}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.campeon}}</td>
-                            {% endif %}
-                        </tr>
-                        <tr>
-                            <td>Segundo</td>
-                            <td>
-                                <select name="segundo"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for equipo in equipos %}
-                                    <option value="{{equipo.code}}"
-                                    {% if extras.segundo == equipo.code %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{equipo.title}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.segundo}}</td>
-                            {% endif %}
-                        </tr>
-                        <tr>
-                            <td>Tercero</td>
-                            <td>
-                                <select name="tercero"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for equipo in equipos %}
-                                    <option value="{{equipo.code}}"
-                                    {% if extras.tercero == equipo.code %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{equipo.title}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.tercero}}</td>
-                            {% endif %}
-                        </tr>
-                        <tr>
-                            <td>Cuarto</td>
-                            <td>
-                                <select name="cuarto"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for equipo in equipos %}
-                                    <option value="{{equipo.code}}"
-                                    {% if extras.cuarto == equipo.code %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{equipo.title}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.cuarto}}</td>
-                            {% endif %}
-                        </tr>
-                        <tr>
-                            <td>Goleador 1</td>
-                            <td>
-                                <select name="goleador1"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for jugador in jugadores %}
-                                    <option value="{{jugador.key}}"
-                                    {% if extras.goleador1 == jugador.key %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{jugador.title}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.goleador1}}</td>
-                            {% endif %}
-                        </tr>
-                        <tr>
-                            <td>Goleador 2</td>
-                            <td>
-                                <select name="goleador2"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for jugador in jugadores %}
-                                    <option value="{{jugador.key}}"
-                                    {% if extras.goleador2 == jugador.key %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{jugador.title}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.goleador2}}</td>
-                            {% endif %}
-                        </tr>
-                        <tr>
-                            <td>Posición Argentina</td>
-                            <td>
-                                <select name="posicion_argentina"
-                                    {% if not permite_modificar %}
-                                    disabled
-                                    {% endif %}
-                                    >
-                                    <option value="ninguno">-</option>
-                                    {% for pos in range(1, 33) %}
-                                    <option value="{{pos}}"
-                                    {% if extras.posicion_argentina == pos %}
-                                    selected="selected"
-                                    {% endif %}
-                                    >{{pos}}</option>
-                                    {% endfor %}
-                                </select>
-                            </td>
-                            {% if score %}
-                            <td class="score-partido">{{score.posicion_argentina}}</td>
-                            {% endif %}
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    {% endif %}
-    {% for grupo,datos_grupo in fixture|dictsort %}
-    <div class="ronda">
-        <div class="{{datos_grupo.tipo}}">
-            <div class="titulo">{{grupo}}</div>
-            <div class="partidos">
-                <table>
-                    <tbody>
-                        {% for partido in datos_grupo.partidos %}
-                        <tr>
-                            <td class="equipo">{{partido.equipo1}}</td>
-                            <td class="resultado radiooption"><input type="radio" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_primer_gol" value="{{partido.equipo1}}"
-                                {% if partido.primerGol == partido.equipo1 %}
-                                checked
-                                {% endif %}
-                                {% if not permite_modificar %}
-                                disabled
-                                {% endif %}
-                                /></td>
-                            {% if permite_modificar %}
-                            <td class="resultado"><input type="text" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_score1" value="{{partido.scoreEquipo1}}"/></td>
-                            <td class="resultado"><input type="text" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_score2" value="{{partido.scoreEquipo2}}"/></td>
-                            {% else %}
-                            <td class="resultado">{{partido.scoreEquipo1}}</td>
-                            <td class="resultado">{{partido.scoreEquipo2}}</td>
-                            {% endif %}
-                            <td class="resultado radiooption"><input type="radio" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_primer_gol" value="{{partido.equipo2}}"
-                                {% if partido.primerGol == partido.equipo2 %}
-                                checked
-                                {% endif %}
-                                {% if not permite_modificar %}
-                                disabled
-                                {% endif %}
-                                /></td>
-                            <td class="equipo">{{partido.equipo2}}</td>
-                            {% if score %}
-                            <td class="score-partido">{{score["score_" + ronda.ronda+ "_" + partido.equipo1 + "_vs_" + partido.equipo2]}}</td>
-                            {% endif %}
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-    <input type="hidden" name="ronda" value="{{ronda.ronda}}"/>
-    {% if permite_modificar %}
-    <input type="submit"/>
-    {% endif %}
-</form>
+{% include "rondas.html" %}
 
 {% endblock %}
