--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -4,15 +4,15 @@
 <h2>Reglas</h2>
 
 <ol>
-    <li>Las planillas se podrán completar hasta 48 hs. antes del primer partido del mundial. Las planillas para las rondas de la llave (8vos / 4tos / Semi  / Final) se recepcionarán hasta 24 hs. antes del primer partido de la ronda.</li>
-    <li>El costo para participar es de $25 por persona. Se abona una sola vez para todo el mundial.</li>
+    <li>Los resultados se podrán completar hasta 24 hs. antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 24 hs. antes del primer partido de la ronda.</li>
+    <li>El costo para participar es de $50 por persona. Se abona una sola vez para todo el mundial.</li>
     <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
-    <li>El que no entregue la planilla a tiempo, no podrá participar de la siguiente ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
-    <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con la PLANILLA DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
-    <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes, porque se les enviará antes del día de comienzo de cada etapa a TODOS los participantes de “EL PRODE DEL MUNDIAL”, el total de las planillas con los resultados propuestos por cada uno.</li>
+    <li>El que no cargue los resultados a tiempo, no podrá participar de la siguiente ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
+    <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con los RESULTADOS DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
+    <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes.</li>
     <li>Las posiciones se actualizarán diariamente y podrán ser vistas desde el sitio.</li>
     <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
-    <li>Pueden invitar a cualquier amigo/Conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
+    <li>Pueden invitar a cualquier amigo/conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
     <li>
     Los puntajes se calculan de la siguiente manera:
     <ul>
@@ -45,6 +45,6 @@ Los saluda atententamente
 
 <p>
 La Comisión Directiva 
-PRODE DEL MUNDIAL 2010
+PRODE DEL MUNDIAL 2014
 </p>
 {% endblock %}
