--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -80,12 +80,32 @@ input[type=submit] {
     text-decoration: none;
 }
 
-.controles {
-    font-size: 13px;
-    color: gray;
-    text-align: right;
-    margin-bottom: 20px;
+.menu {
+    margin: 0;
+    padding: 0;
+    float: left;
+    font-weight: bold;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 1em;
+    border-width: 1px 0;
 }
+
+.menu li {
+    display: inline;
+    float: left;
+    padding: 5px 5px;
+    border-right: 1px solid black;
+}
+/*
+.menu li a {
+}
+*/
+.menu li a {
+    text-decoration: none;
+    color: black;
+}
+
 
 .fecha {
     position: absolute;
