--- a/templates/base.html
+++ b/templates/base.html
@@ -8,18 +8,18 @@
 
     <body>
 
-        <div class="controles">
-            <a href="/reglas">reglas</a>
+        <ul class="menu">
+            <li><a href="/reglas">reglas</a></li>
             {% if user %}
-            <a href="/posiciones">posiciones</a>
-            <a href="/resultados">resultados</a>
-            <a href="/resultados_por_usuario">Ver planillas</a>
-            <span>{{user.name}} (<a href="/logout">logout</a>)</span>
+            <li><a href="/posiciones">posiciones</a></li>
+            <li><a href="/resultados">resultados</a></li>
+            <li></ku><a href="/resultados_por_usuario">Ver otros</a></li>
+            <li>{{user.name}} (<a href="/logout">logout</a>)</li>
             {% else %}
-            <a href="/login">login</a>
-            <a href="/signup">sign up</a>
+            <li><a href="/login">login</a></li>
+            <li><a href="/signup">sign up</a></li>
             {% endif %}
-        </div>
+        </ul>
 
         <a href="/" class="main-title">Prode Mundial 2014</a>
 
