--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -97,14 +97,39 @@ input[type=submit] {
     padding: 5px 5px;
     border-right: 1px solid black;
 }
-/*
-.menu li a {
-}
-*/
+
 .menu li a {
     text-decoration: none;
     color: black;
 }
+
+.menu-rondas {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 1em;
+    //border-width: 1px 0;
+}
+
+.menu-rondas li {
+    display: inline;
+    float: left;
+    padding: 5px 0px;
+    border-right: 1px solid black;
+}
+
+.menu-rondas li a {
+    text-decoration: none;
+    color: black;
+}
+
+.menu-rondas  .seleccionada a{
+    font-weight: 110%;
+    color: #176DB3;
+}
+
 
 
 .fecha {
