logo del mundial

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,10 @@
             {% endif %}
         </ul>
 
-        <a href="/" class="main-title">Prode Mundial 2014</a>
+        <div>
+            <img src="images/logo_mundial.png"/ id="logo-mundial">
+            <a href="/" class="main-title">Prode Mundial 2014</a>
+        </div>
 
         {% block body_content %}
         {% endblock %}
