--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -8,6 +8,13 @@ body {
     padding: 10px;
     color: #333;
 }
+#logo-mundial {
+    //float: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 
 .login-area {
     font-size: 13px;
