--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -1,4 +1,10 @@
 body {
+    background-color: #75AADB;
+    margin-top: 0px;
+    padding: 0px;
+}
+
+.container-all {
     position: relative;
     font-family: Helvetica, Arial, sans-serif;
     font-size: 14px;
@@ -7,6 +13,7 @@ body {
     margin: 0 auto;
     padding: 10px;
     color: #333;
+    background-color: #FFF;
 }
 #logo-mundial {
     //float: left;
@@ -134,7 +141,8 @@ input[type=submit] {
 
 .menu-rondas  .seleccionada a{
     font-weight: 110%;
-    color: #176DB3;
+ //   color: #176DB3;
+    color: #75AADB;
 }
 
 
@@ -297,7 +305,8 @@ td.score-partido {
 }
 
 .counter .valor {
-    color: #176DB3;
+ //   color: #176DB3;
+    color: #75AADB;
     font-size: 250%;
 }
 
