--- a/templates/base.html
+++ b/templates/base.html
@@ -7,28 +7,30 @@
     </head>
 
     <body>
+        <div class="container-all">
 
-        <ul class="menu">
-            <li><a href="/reglas">reglas</a></li>
-            {% if user %}
-            <li><a href="/posiciones">posiciones</a></li>
-            <li><a href="/resultados">resultados</a></li>
-            <li></ku><a href="/resultados_por_usuario">Ver otros</a></li>
-            <li>{{user.name}} (<a href="/logout">logout</a>)</li>
-            {% else %}
-            <li><a href="/login">login</a></li>
-            <li><a href="/signup">sign up</a></li>
-            {% endif %}
-        </ul>
+            <ul class="menu">
+                <li><a href="/reglas">reglas</a></li>
+                {% if user %}
+                <li><a href="/posiciones">posiciones</a></li>
+                <li><a href="/resultados">resultados</a></li>
+                <li></ku><a href="/resultados_por_usuario">Ver otros</a></li>
+                <li>{{user.name}} (<a href="/logout">logout</a>)</li>
+                {% else %}
+                <li><a href="/login">login</a></li>
+                <li><a href="/signup">sign up</a></li>
+                {% endif %}
+            </ul>
 
-        <div>
-            <img src="images/logo_mundial.png"/ id="logo-mundial">
-            <a href="/" class="main-title">Prode Mundial 2014</a>
+            <div>
+                <img src="images/logo_mundial.png"/ id="logo-mundial">
+                <a href="/" class="main-title">Prode Mundial 2014</a>
+            </div>
+
+            {% block body_content %}
+            {% endblock %}
+
+
         </div>
-
-        {% block body_content %}
-        {% endblock %}
-
-
     </body>
 </html>
