corregido el css de selector de rondas en la parte de resultados y ver otras planillas

--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -3,9 +3,15 @@
 {% block body_content %}
 
 <div class="selector-rondas">
-    {% for r in rondas %}
-    <a href="/resultados?ronda={{r.ronda}}">{{r.ronda}}</a> 
-    {% endfor %}
+    <ul class="menu-rondas">
+        {% for r in rondas %}
+        <li
+        {% if ronda.ronda == r.ronda %}
+        class="seleccionada"
+        {% endif %}
+        ><a href="/resultados?ronda={{r.ronda}}">{{r.ronda}}</a> </li>
+        {% endfor %}
+    </ul>
 </div>
 
 {% include "rondas.html" %}
