retocado signup y pasado al castellano

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <li>{{user.name}} (<a href="/logout">logout</a>)</li>
                 {% else %}
                 <li><a href="/login">login</a></li>
-                <li><a href="/signup">sign up</a></li>
+                <li><a href="/signup">Registrarse</a></li>
                 {% endif %}
             </ul>
 
