--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -52,6 +52,7 @@ h2 {
 
 .error {
     color: red;
+    font-size: 90%;
 }
 
 label {
@@ -61,6 +62,47 @@ label {
 
 label + label {
     margin-top: 20px;
+}
+
+.signup {
+    //width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.signup-input {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    background: none;
+    height: 25px;
+    border: 0;
+    border: 1px solid #D8D8D8;
+}
+
+.boton-signup {
+    //display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 30%;
+    height: 42px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    display: block;
+    background: none;
+    font-size: 120%;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 0 1px rgba(255, 255, 255, 0.5);
+    background: #fcfcfc;
+    border: 1px solid;
+    border-color: #d8d8d8 #d1d1d1 #c3c3c3;
+    border-radius: 2px;
+    cursor: pointer;
 }
 
 /*
