--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,33 +1,36 @@
 {% extends "base.html" %}
 
 {% block body_content%}
-<h2>Signup</h2>
+<h2>Registro</h2>
+<p>
+Crea tu usuario con tu nombre y apellido para una fácil identificación.
+</p>
 
-<form method="post">
+<form method="post" class="signup">
     <table>
         <tbody>
             <tr>
-                <td class="label">Username</td>
-                <td><input type="text" name="username" value="{{username}}"/></td>
+                <td class="label">Usuario</td>
+                <td><input type="text" name="username" class="signup-input" value="{{username}}"/></td>
                 <td class="error">{{error_username}}</td>
             </tr>
             <tr>
-                <td class="label">Password</td>
-                <td><input type="password" name="password" value=""/></td>
+                <td class="label">Contraseña</td>
+                <td><input type="password" name="password" class="signup-input" value=""/></td>
                 <td class="error">{{error_password}}</td>
             </tr>
             <tr>
-                <td class="label">Verify password</td>
-                <td><input type="password" name="verify" value=""/></td>
+                <td class="label">Verificar Contraseña</td>
+                <td><input type="password" name="verify" class="signup-input" value=""/></td>
                 <td class="error">{{error_verify}}</td>
             </tr>
             <tr>
-                <td class="label">Email (optional)</td>
-                <td><input type="text" name="email" value="{{email}}"/></td>
+                <td class="label">Email (opcional)</td>
+                <td><input type="text" name="email" class="signup-input" value="{{email}}"/></td>
                 <td class="error">{{error_email}}</td>
             </tr>
         </tbody>
     </table>
-    <input type="submit"/>
+    <input type="submit" value="Registrarse" class="boton-signup"/>
 </form>
 {% endblock %}
