--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
 
 
 <div class="countdown" id="countdown">
-    <div class="titulo" id="titulo_countdown">Tiempo hasta el cierre</div>
+    <div class="titulo" id="titulo_countdown">Tiempo para realizar cambios en esta sección</div>
     <div class="contenido-countdown">
         <div class="counter">
             <div class="valor dias" id="dias_restantes">-</div>
