--- a/templates/rondas.html
+++ b/templates/rondas.html
@@ -1,4 +1,52 @@
 <form method="post">
+    {% for grupo,datos_grupo in fixture|dictsort %}
+    <div class="ronda">
+        <div class="{{datos_grupo.tipo}}">
+            <div class="titulo">{{grupo}}</div>
+            <div class="partidos">
+                <table>
+                    <tbody>
+                        {% for partido in datos_grupo.partidos %}
+                        <tr>
+                            <td class="equipo">{{partido.equipo1}}</td>
+                            <td class="resultado radiooption"><input type="radio" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_primer_gol" value="{{partido.equipo1}}"
+                                {% if partido.primerGol == partido.equipo1 %}
+                                checked
+                                {% endif %}
+                                {% if not permite_modificar %}
+                                disabled
+                                {% endif %}
+                                /></td>
+                            {% if permite_modificar %}
+                            <td class="resultado"><input type="text" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_score1" value="{{partido.scoreEquipo1}}"/></td>
+                            <td class="resultado"><input type="text" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_score2" value="{{partido.scoreEquipo2}}"/></td>
+                            {% else %}
+                            <td class="resultado">{{partido.scoreEquipo1}}</td>
+                            <td class="resultado">{{partido.scoreEquipo2}}</td>
+                            {% endif %}
+                            <td class="resultado radiooption"><input type="radio" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_primer_gol" value="{{partido.equipo2}}"
+                                {% if partido.primerGol == partido.equipo2 %}
+                                checked
+                                {% endif %}
+                                {% if not permite_modificar %}
+                                disabled
+                                {% endif %}
+                                /></td>
+                            <td class="equipo">{{partido.equipo2}}</td>
+                            {% if score %}
+                            <td class="score-partido">{{score["score_" + ronda.ronda+ "_" + partido.equipo1 + "_vs_" + partido.equipo2]}}</td>
+                            {% endif %}
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+
+    <p>Cargá también los siguientes resultados:</p>
+
     {% if mostrarExtras %}
     <div class="ronda">
         <div class="non-grupo">
@@ -164,51 +212,6 @@
         </div>
     </div>
     {% endif %}
-    {% for grupo,datos_grupo in fixture|dictsort %}
-    <div class="ronda">
-        <div class="{{datos_grupo.tipo}}">
-            <div class="titulo">{{grupo}}</div>
-            <div class="partidos">
-                <table>
-                    <tbody>
-                        {% for partido in datos_grupo.partidos %}
-                        <tr>
-                            <td class="equipo">{{partido.equipo1}}</td>
-                            <td class="resultado radiooption"><input type="radio" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_primer_gol" value="{{partido.equipo1}}"
-                                {% if partido.primerGol == partido.equipo1 %}
-                                checked
-                                {% endif %}
-                                {% if not permite_modificar %}
-                                disabled
-                                {% endif %}
-                                /></td>
-                            {% if permite_modificar %}
-                            <td class="resultado"><input type="text" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_score1" value="{{partido.scoreEquipo1}}"/></td>
-                            <td class="resultado"><input type="text" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_score2" value="{{partido.scoreEquipo2}}"/></td>
-                            {% else %}
-                            <td class="resultado">{{partido.scoreEquipo1}}</td>
-                            <td class="resultado">{{partido.scoreEquipo2}}</td>
-                            {% endif %}
-                            <td class="resultado radiooption"><input type="radio" name="{{ronda.ronda}}_{{partido.equipo1}}_vs_{{partido.equipo2}}_primer_gol" value="{{partido.equipo2}}"
-                                {% if partido.primerGol == partido.equipo2 %}
-                                checked
-                                {% endif %}
-                                {% if not permite_modificar %}
-                                disabled
-                                {% endif %}
-                                /></td>
-                            <td class="equipo">{{partido.equipo2}}</td>
-                            {% if score %}
-                            <td class="score-partido">{{score["score_" + ronda.ronda+ "_" + partido.equipo1 + "_vs_" + partido.equipo2]}}</td>
-                            {% endif %}
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
     <input type="hidden" name="ronda" value="{{ronda.ronda}}"/>
     {% if permite_modificar %}
     <input type="submit"/>
