Cambiado de goleador1 a goleador op. 1

--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -29,7 +29,7 @@
             <li>Goleador 2: 70 puntos.</li>
             <li>Posición Argentina: 100 puntos.</li>
         </ul>
-        En el caso de goleador1 y goleador2 se busca acertar quién será el goleador del campeonato. Por ejemplo, si en goleador1 elijo a Kempes y en goleador2 a Luque, si sale goleador Kempes ganaré 100 puntos, mientras que si el goleador es Luque, sólo 70 puntos. Si otra persona es goleador, no sumaré puntos.
+        En el caso de goleador op. 1 y goleador op. 2 se busca acertar quién será el goleador del campeonato dando 2 opciones. Por ejemplo, si en goleador op. 1 elijo a Kempes y en goleador op. 2 a Luque, si sale goleador Kempes ganaré 100 puntos, mientras que si el goleador es Luque, sólo 70 puntos. Si otra persona es goleador, no sumaré puntos.
         </li>
     </ul>
     </li>
