--- a/templates/rondas.html
+++ b/templates/rondas.html
@@ -142,7 +142,7 @@
                         {% endif %}
                     </tr>
                     <tr>
-                        <td>Goleador 1</td>
+                        <td>Goleador Op. 1</td>
                         <td>
                             <select name="goleador1"
                                 {% if not permite_modificar %}
@@ -164,7 +164,7 @@
                         {% endif %}
                     </tr>
                     <tr>
-                        <td>Goleador 2</td>
+                        <td>Goleador Op. 2</td>
                         <td>
                             <select name="goleador2"
                                 {% if not permite_modificar %}
