--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -222,6 +222,10 @@ input[type=submit] {
     box-align:center;
 }
 
+.grupo .titulo::before {
+    content: "Grupo ";
+}
+
 .grupo, .non-grupo {
     display: inline-block;
     border: 1px solid black;
