--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -7,7 +7,7 @@
     <li>Los resultados se podrán completar hasta 24 hs. antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 24 hs. antes del primer partido de la ronda.</li>
     <li>El costo para participar es de $50 por persona. Se abona una sola vez para todo el mundial.</li>
     <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
-    <li>El que no cargue los resultados a tiempo, no podrá participar de la siguiente ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
+    <li>El que no cargue los resultados a tiempo, no podrá participar de esa ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
     <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con los RESULTADOS DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
     <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes.</li>
     <li>Las posiciones se actualizarán diariamente y podrán ser vistas desde el sitio.</li>
@@ -33,7 +33,7 @@
         </li>
     </ul>
     </li>
-    <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial.</li>
+    <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial: <a href="mailto:prodelmundial2014@gmail.com">prodelmundial2014@gmail.com</a></li>
 </ol>
 
 <p>
