--- a/templates/posiciones.html
+++ b/templates/posiciones.html
@@ -18,7 +18,7 @@
             {% set pos = pos + 1 %}
             <tr>
                 <td>{{ pos }}</td>
-                <td>{{usuario.name}}</td>
+                <td><a href="/resultados_por_usuario?usuario={{usuario.name}}">{{usuario.name}}</a></td>
                 <td>{{usuario.puntaje}}</td>
             </tr>
             {% endfor %}
