--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -64,14 +64,14 @@ label + label {
     margin-top: 20px;
 }
 
-.signup {
+.simple-form {
     //width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
 
 
-.signup-input {
+.simple-input {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -82,7 +82,7 @@ label + label {
     border: 1px solid #D8D8D8;
 }
 
-.boton-signup, .boton-guardar{
+.boton-simple {
     //display: block;
     margin: 0 auto;
     margin-top: 10px;
