--- a/templates/rondas.html
+++ b/templates/rondas.html
@@ -214,7 +214,7 @@
     {% endif %}
     <input type="hidden" name="ronda" value="{{ronda.ronda}}"/>
     {% if permite_modificar %}
-    <input type="submit" value="Guardar cambios" class="boton-guardar"/>
+    <input type="submit" value="Guardar cambios" class="boton-simple"/>
     {% endif %}
 </form>
 
