--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -14,6 +14,9 @@ body {
     padding: 10px;
     color: #333;
     background-color: #FFF;
+    
+    text-align: justify;
+    line-height: 1.8;
 }
 #logo-mundial {
     //float: left;
@@ -444,3 +447,7 @@ td.score-partido {
     margin-bottom: 30px;
 }
 
+.reglas {
+    margin-left: 10px;
+    width: 95%;
+}
