--- a/templates/reglas.html
+++ b/templates/reglas.html
@@ -1,51 +1,53 @@
 {% extends "base.html" %}
 
 {% block body_content %}
-<h2>Reglas</h2>
+<div class="reglas">
+    <h2>Reglas</h2>
 
-<ol>
-    <li>Los resultados se podrán completar hasta 24 hs. antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 24 hs. antes del primer partido de la ronda.</li>
-    <li>El costo para participar es de $50 por persona. Se abona una sola vez para todo el mundial.</li>
-    <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
-    <li>El que no cargue los resultados a tiempo, no podrá participar de esa ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
-    <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con los RESULTADOS DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
-    <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes.</li>
-    <li>Las posiciones se actualizarán diariamente y podrán ser vistas desde el sitio.</li>
-    <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
-    <li>Pueden invitar a cualquier amigo/conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
-    <li>
-    Los puntajes se calculan de la siguiente manera:
-    <ul>
-        <li>Acertar el resultado final de un partido: 30 puntos.</li>
-        <li>Acertar el marcador de un partido: 15 puntos. Ej: Si se marca que Argentina ganará 4-0 a Bosnia y el partido termina 2-1 en favor a Argentina, se sumarán 30 puntos (por acertar que Argentina gana). Si el partido termina 4-0 en favor a Argentina, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Argentina lo pierde o empata, no se suma ningún punto.</li>
-        <li>Acertar quien mete el primer gol de cada partido: 10 puntos.</li>
-        <li>Se sumarán puntos extras en caso de acertar quién es el campeón, segundo, tercer y cuarto puesto, goleador del campeonato y cuál será la posición final de Argentina. Los puntajes se determinarán de la siguiente manera:
+    <ol>
+        <li>Los resultados se podrán completar hasta 24 hs. antes del primer partido del mundial. Los resultados para las rondas de la llave (8vos/4tos/Semi/Final) se podrán cargar hasta 24 hs. antes del primer partido de la ronda.</li>
+        <li>El costo para participar es de $50 por persona. Se abona una sola vez para todo el mundial.</li>
+        <li>El dinero recaudado es totalmente repartido en premios. El participante que haga mas puntos, se llevará el 75% del total recaudado.  Para el segundo 15%, y para el tercero 10%.</li>
+        <li>El que no cargue los resultados a tiempo, no podrá participar de esa ronda.  O sea, de querer seguir jugando, deberá esperar a la siguiente Ronda.</li>
+        <li>En caso de que haya empate en las primeras tres posiciones, se resolverá según quien haya hecho mas puntos con los RESULTADOS DE LA PRIMER RONDA. En caso de seguir empatados, se dividirán en partes iguales.</li>
+        <li>Para demostrar la LEGALIDAD de los puntajes, cada uno podrá controlar el puntaje de todos los participantes.</li>
+        <li>Las posiciones se actualizarán diariamente y podrán ser vistas desde el sitio.</li>
+        <li>Puede participar cualquiera, mientras cumpla con las condiciones mencionadas arriba.</li>
+        <li>Pueden invitar a cualquier amigo/conocido/etc, pero serán uds. los responsables de recaudar la plata de cada uno de ellos.</li>
+        <li>
+        Los puntajes se calculan de la siguiente manera:
         <ul>
-            <li>Campeón: 100 puntos.</li>
-            <li>Segundo: 80 puntos.</li>
-            <li>Tercero: 60 puntos.</li>
-            <li>Cuarto: 50 puntos.</li>
-            <li>Goleador 1: 100 puntos.</li>
-            <li>Goleador 2: 70 puntos.</li>
-            <li>Posición Argentina: 100 puntos.</li>
+            <li>Acertar el resultado final de un partido: 30 puntos.</li>
+            <li>Acertar el marcador de un partido: 15 puntos. Ej: Si se marca que Argentina ganará 4-0 a Bosnia y el partido termina 2-1 en favor a Argentina, se sumarán 30 puntos (por acertar que Argentina gana). Si el partido termina 4-0 en favor a Argentina, además de los 30 puntos se sumarán 15 por acertar el marcador. Pero si ese partido Argentina lo pierde o empata, no se suma ningún punto.</li>
+            <li>Acertar quien mete el primer gol de cada partido: 10 puntos.</li>
+            <li>Se sumarán puntos extras en caso de acertar quién es el campeón, segundo, tercer y cuarto puesto, goleador del campeonato y cuál será la posición final de Argentina. Los puntajes se determinarán de la siguiente manera:
+            <ul>
+                <li>Campeón: 100 puntos.</li>
+                <li>Segundo: 80 puntos.</li>
+                <li>Tercero: 60 puntos.</li>
+                <li>Cuarto: 50 puntos.</li>
+                <li>Goleador 1: 100 puntos.</li>
+                <li>Goleador 2: 70 puntos.</li>
+                <li>Posición Argentina: 100 puntos.</li>
+            </ul>
+            En el caso de goleador op. 1 y goleador op. 2 se busca acertar quién será el goleador del campeonato dando 2 opciones. Por ejemplo, si en goleador op. 1 elijo a Kempes y en goleador op. 2 a Luque, si sale goleador Kempes ganaré 100 puntos, mientras que si el goleador es Luque, sólo 70 puntos. Si otra persona es goleador, no sumaré puntos.
+            </li>
         </ul>
-        En el caso de goleador op. 1 y goleador op. 2 se busca acertar quién será el goleador del campeonato dando 2 opciones. Por ejemplo, si en goleador op. 1 elijo a Kempes y en goleador op. 2 a Luque, si sale goleador Kempes ganaré 100 puntos, mientras que si el goleador es Luque, sólo 70 puntos. Si otra persona es goleador, no sumaré puntos.
         </li>
-    </ul>
-    </li>
-    <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial: <a href="mailto:prodelmundial2014@gmail.com">prodelmundial2014@gmail.com</a></li>
-</ol>
+        <li>Por cualquier duda, comentario o propuesta que surja, lo mismo para cualquier error que detecten en el calculo de los puntos, sin duda enviar un mail a la dirección del Prode del mundial: <a href="mailto:prodelmundial2014@gmail.com">prodelmundial2014@gmail.com</a></li>
+    </ol>
 
-<p>
-Esperamos que todos podamos disfrutar de este Prode, que fue creado con el fin del entretenimiento y no del lucro...
-</p>
+    <p>
+    Esperamos que todos podamos disfrutar de este Prode, que fue creado con el fin del entretenimiento y no del lucro...
+    </p>
 
-<p>
-Los saluda atententamente
-</p>
+    <p>
+    Los saluda atententamente
+    </p>
 
-<p>
-La Comisión Directiva 
-PRODE DEL MUNDIAL 2014
-</p>
+    <p>
+    La Comisión Directiva 
+    PRODE DEL MUNDIAL 2014
+    </p>
+</div>
 {% endblock %}
